Fixed svg on dark mode.

--- a/styles/home.css
+++ b/styles/home.css
@@ -435,7 +435,7 @@ section {
     flex-direction: column;
     height: 361px;
     border-radius: 8px;
-    background: var(--day-white, #FFF);
+    background: var(--day-white01);
     transform: translate(-10%, -10%);
     box-shadow: 1px 6px 14px 0px rgba(115, 115, 115, 0.10), 2px 25px 25px 0px rgba(115, 115, 115, 0.09), 5px 56px 34px 0px rgba(115, 115, 115, 0.05), 9px 100px 40px 0px rgba(115, 115, 115, 0.01), 13px 157px 44px 0px rgba(115, 115, 115, 0.00);
 }
