--- a/styles/menu.css
+++ b/styles/menu.css
@@ -231,6 +231,7 @@
     font-size: 20px;
     font-weight: 500;
     padding-left: 32px;
+    background: none;
 }
 
 .filter-section>.separator {
@@ -945,6 +946,7 @@
     border: 1px solid var(--day-dark06);
     padding: 16px;
     transition: all 0.1s ease-in-out;
+    background: none;
 }
 
 .item-popup>.reviews-side>.content>.create-review>.textarea>textarea.anim {
